--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
+
         <activity android:name=".settings"
             android:parentActivityName=".HomeActivity">
 
@@ -22,7 +23,26 @@
             android:name="com.google.android.actions"
             android:resource="@menu/main_menu" />
 
-        <activity android:name=".TeaTypeActivity" />
+
+        <activity android:name=".TeaDetailActivity"
+
+            android:parentActivityName=".TeaTypeActivity">
+
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TeaTypeActivity"/>
+
+
+        </activity>
+
+        <activity android:name=".TeaTypeActivity"
+            android:parentActivityName=".HomeActivity">
+
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity"/>
+
+        </activity>
+
+
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
