--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <activity android:name=".settings"
             android:parentActivityName=".HomeActivity">
@@ -43,7 +43,17 @@
         </activity>
 
 
-        <activity android:name=".HomeActivity" />
+
+
+        <activity android:name=".HomeActivity">
+
+            <meta-data
+                android:name="com.google.android.actions"
+                android:resource="@menu/main_menu" />
+
+        </activity>
+
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
