--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
 
-        <activity android:name=".AddCategoryActivity">
+        <activity android:name=".AddEditCategoryActivity">
         </activity>
 
 
