--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
 
         </activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".TeaActivity">
 
         </activity>
 
