Admin table, Login activity + Adding Dark Mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FavoriteActivity"></activity>
+        <activity android:name=".FavoriteActivity"/>
         <activity android:name=".AddEditCategoryActivity" />
         <activity android:name=".AddEditTeaActivity" />
+        <activity android:name=".SettingsActivity"/>
 
         <meta-data
             android:name="com.google.android.actions"
@@ -35,13 +36,25 @@
             <meta-data
                 android:name="com.google.android.actions"
                 android:resource="@menu/category_menu" />
+        </activity>
 
+
+
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+
+
+
+
+
+
     </application>
 
 </manifest>
